more refactoring of legacy code and weird logic